--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ discord.py==2.7.3
 Flask==2.3.6
 requests==2.32.0
 python-dotenv==1.1.1
+sqlite3  # Actually built-in to Python, but listing it can avoid errors
